# cloud_kurum

./: .env  .gitignore  Cargo.toml  README.md  SQL.md  diesel.toml  required
migrations/2024-10-15-200028_create_usuariosss/: down.sql  up.sql
migrations/2024-11-19-104248_usuario/: down.sql  up.sql
migrations/2024-12-07-155251_login/: down.sql  up.sql
migrations/2024-12-07-234346_biblioteca/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  modific_user.rs  nuevo_usuario.rs  saludo.rs  schema.rs
src/handlers/: image_handler.rs  mod.rs
src/modules/: account.rs  auth.rs  database.rs  generos.rs  libros.rs  mod.rs  relaciones.rs  usuarios.rs
src/old_version/: config.txt  main.rs  saludo.rs
src/services/: image_service.rs  mod.rs
src/utils/: mod.rs  r2_client.rs
src/web/: basic.rs  interface.rs
