[package]
name = "nubeKurum"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.6"   # Agrega esta línea
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["r2d2", "postgres"] }
dotenv = "0.15"
r2d2 = "0.8"
tokio = { version = "1", features = ["full"] }
